crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__rollup_not_reg.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "NetworkNotRegistered { network_id: 1337 }"
---
{
  "code": -10001,
  "data": {
    "network-not-registered": {
      "network-id": 1337
    }
  },
  "message": "Network ID 1337 not registered"
}
