crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__settle_contract.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Settlement(Contract { detail: \"Contract call reverted with data: 0x666f6f\" })"
---
{
  "code": -10004,
  "data": {
    "settlement": {
      "contract": {
        "detail": "Contract call reverted with data: 0x666f6f"
      }
    }
  },
  "message": "L1 settlement error: Contract error"
}
