crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__settle_io.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Settlement(IoError(\"unsupported RPC\"))"
---
{
  "code": -10004,
  "data": {
    "settlement": {
      "io-error": "unsupported RPC"
    }
  },
  "message": "L1 settlement error: IO error"
}
