crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__settle_l1_timeout.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Settlement(IoError(\"Settlement timed out after 1800s\"))"
---
{
  "code": -10004,
  "data": {
    "settlement": {
      "io-error": "Settlement timed out after 1800s"
    }
  },
  "message": "L1 settlement error: IO error"
}
