crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__sig_invalid_len.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover signer: invalid signature length, got 42, expected 65\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover signer: invalid signature length, got 42, expected 65"
    }
  },
  "message": "Rollup signature verification failed"
}
