crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__sig_recov.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover signer: Public key recovery error\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover signer: Public key recovery error"
    }
  },
  "message": "Rollup signature verification failed"
}
