crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__sig_verif.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover signer: Signature verification failed. Expected 0x1111…1111, got 0x2222…2222\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover signer: Signature verification failed. Expected 0x1111…1111, got 0x2222…2222"
    }
  },
  "message": "Rollup signature verification failed"
}
