crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__txstatus_check.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Status(TxStatus { detail: \"middleware error: Attempted to sign a transaction with no available signer. Hint: did you mean to use a SignerMiddleware?\" })"
snapshot_kind: text
---
{
  "code": -10005,
  "data": {
    "status": {
      "tx-status": {
        "detail": "middleware error: Attempted to sign a transaction with no available signer. Hint: did you mean to use a SignerMiddleware?"
      }
    }
  },
  "message": "Status retrieval error: Failed to get tx status"
}
