crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__txstatus_notfound.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "Status(TxNotFound { hash: 0x9797979797979797979797979797979797979797979797979797979797979797 })"
snapshot_kind: text
---
{
  "code": -10005,
  "data": {
    "status": {
      "tx-not-found": {
        "hash": "0x9797979797979797979797979797979797979797979797979797979797979797"
      }
    }
  },
  "message": "Status retrieval error: Transaction not found"
}
